--- a/css/main.css
+++ b/css/main.css
@@ -293,7 +293,7 @@ th {
 -----------------------------------------------------*/
  body {
 	/*font: 95% 'Arial', Georgia, serif;*/
-        font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+        font-family: Arial, Helvetica, sans-serif;
 	background: #eaeded;
 	direction: ltr;
 	text-align: justify;
@@ -305,6 +305,7 @@ h1, h2, h3, h4, h5, h6 {
   	text-align: left;
 	font-weight: bold;
 	color:	#0362a5;
+	border-bottom: 1px solid black;	
 }
 
 
