--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1{
-	border-bottom: 1px solid black;		
+	border-bottom: 1px solid black;	
+	font-size: 2em;
 }
 
 
@@ -390,14 +391,14 @@ header p.main_title {
 	text-align: center;
 	margin: 10px;
 	font-size: 1.5em;
-	font-weight: 600;
+	font-weight: 300;
 }
 
 header h1 {
 	font-size: 2em;
 	line-height:1;
 	margin: 0;
-	text-transform: uppercase;
+	#text-transform: uppercase;
 	color: #0362a5;		
 }
 header p {
