--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,9 +22,9 @@
 <body>
 <header role="banner" class="page-header" id="top">
     <!--<h1>{{site.title}}</h1>-->
-    <h1 class = "main_title">VU NGUYEN'S HOMEPAGE</h1>
+    <h1 class = "main_title">Welcome to VuNguyen's website</h1>
     <!--<p>{{site.tagline}}</p>-->
-    <p class = "main_title">welcome to Vu's website</p>
+    <!--<p class = "main_title">welcome to Vu's website</p>-->
 
 	
 
