--- a/css/main.css
+++ b/css/main.css
@@ -294,10 +294,10 @@ th {
  body {
 	/*font: 95% 'Arial', Georgia, serif;*/
         font-family: Arial, Helvetica, sans-serif;
-	background: #eaeded;
+	background: white;
 	direction: ltr;
 	text-align: justify;
-	 background-image: {{site.url}}/assests/ban.png;
+	background-image: {{site.url}}/assests/(ban.png);
 }
 
 h1, h2, h3, h4, h5, h6 {
