--- a/css/main.css
+++ b/css/main.css
@@ -673,20 +673,24 @@ nav {
 	margin-bottom: 1em;
 	text-align: center;
 	padding: 2em;
+	margin:0 auto;
 }
 nav ul {
 	display: none;
 	text-align: center;
+	margin:0 auto;
 }
 	
 nav ul li {
 	text-align: center;	
 	background: green;
+	margin:0 auto;
 }
 nav li {
 	background: #42659A;
 	margin-bottom: .2em;
 	text-align: center;
+	margin:0 auto;
 }
 nav li:hover {
 	background: #333;
