--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,13 @@ box-sizing: border-box;
 color: #666;
 }
 
+menu {
+	margin: 0 auto;
+}
 
+.menu {
+	margin: 0 auto;
+}
 /* Portions of styles taken from or modified from normalize.css */
 /*! normalize.css v3.0.2 | MIT License | git.io/normalize */
 /**
