--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
 -->	
 	
 <nav style="margin: 0 auto">
-<ul>	
+<ul style="display: inline-block;">	
   <li><a class = "button" href="{{site.baseurl}}/index.html">Blog</a></li>
   <li><a class = "button" href="{{site.baseurl}}/Publications.html">Publications<a</li>
   <li><a class = "button" href="{{site.baseurl}}/Family.html">Family</a></li>
