--- a/css/main.css
+++ b/css/main.css
@@ -672,28 +672,23 @@ aside li {
    top navigation styles
 -----------------------------------------------------*/
 nav {
-	background: green;
-	margin-bottom: 1em;
+	background: none;
 	text-align: center;
 	padding: 2em;
-	margin:0 auto;
 }
 nav ul {
 	display: none;
 	text-align: center;
-	margin:0 auto;
 }
 	
 nav ul li {
 	text-align: center;	
 	background: green;
-	margin:0 auto;
 }
 nav li {
 	background: #42659A;
 	margin-bottom: .2em;
 	text-align: center;
-	margin:0 auto;
 }
 nav li:hover {
 	background: #333;
